sample-istio-specific-request.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:
        - destination:
            host: reviews
            subset: v2
      match:
        - headers:
            end-user:
              exact: test
    - route:
        - destination:
            host: reviews
            subset: v1
